# HIRAHelper

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/client/: main.cpp
src/server/: Cleaner.hpp  ConfigManager.hpp  HtmlTemplates.hpp  Logger.hpp  StorageHandler.hpp  main.cpp
